[package]
name = "pimalaya-stream"
description = "Pimalaya streams: TLS/SASL types and blocking I/O sessions"
version = "0.0.1"
authors = ["soywod <clement.douin@posteo.net>"]
rust-version = "1.56"
edition = "2021"
license = "MIT"
keywords = ["pimalaya", "stream", "tls", "sasl"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/pimalaya-stream/latest/pimalaya_stream"
repository = "https://github.com/pimalaya/stream"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std", "rustls-ring"]
std = ["dep:uds_windows"]
http = []
smtp = ["dep:gethostname", "dep:io-smtp"]
native-tls = ["dep:native-tls"]
rustls-aws = ["dep:rustls", "dep:rustls-platform-verifier", "rustls/aws-lc-rs"]
rustls-ring = ["dep:rustls", "dep:rustls-platform-verifier", "rustls/ring"]
vendored = ["native-tls?/vendored"]

[target.'cfg(windows)'.dependencies]
uds_windows = { version = "1", optional = true }

[dependencies]
anyhow = "1"
gethostname = { version = "1", optional = true }
io-smtp = { version = "0.0.1", default-features = false, optional = true }
log = "0.4"
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12"], optional = true }
rustls-platform-verifier = { version = "0.7", optional = true }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2.2", default-features = false }

[patch.crates-io]
io-smtp.git = "https://github.com/pimalaya/io-smtp"
